# Archiver

./: CMakeLists.txt  archiver.cpp  readme.md  test.cpp
lib/: Huffman.cpp  Huffman.h  exceptions.h
lib/FileManaging/: FileManagers.h  Hasher.cpp  Hasher.h  Reader.cpp  Reader.h  Writer.cpp  Writer.h
lib/Structs/: HuffmanBor.cpp  HuffmanBor.h  PriorityQueue.h
